# esp-csi-cli-rs

./: Cargo.toml  README.md
.cargo/: config.toml
