[package]
name = "csi-cli-esp32c3"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", default-features = false, features = [
    "esp32c3",
] }
esp-alloc = { version = "0.6.0" }
embedded-io-async = "0.6.1"
esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32c3",
    "utils",
    "wifi",
    "esp-alloc",
] }
heapless = { version = "0.8.0", default-features = false }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-sync = { version = "0.6.1" }
esp-csi-rs = { path = "../esp-csi-rs/", features = ["esp32c3", "println"] }
menu = "0.6.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
